# icepack

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
crates/binding_options/: Cargo.toml
crates/binding_options/_src/options/: mod.rs  raw_features.rs
crates/binding_options/src/options/: js_loader.rs  mod.rs  raw_features.rs  raw_module.rs  raw_optimization.rs
crates/binding_options/src/options/raw_builtins/: mod.rs
crates/binding_options/src/plugins/js_loader/: resolver.rs
crates/loader_barrel/: Cargo.toml
crates/loader_barrel/src/: lib.rs
crates/loader_barrel/tests/: fixtures.rs
crates/loader_barrel/tests/fixtures/basic/: output.js
crates/loader_barrel/tests/fixtures/import-all/: input.js  output.js
crates/loader_barrel/tests/fixtures/named/: input.js
crates/loader_barrel/tests/fixtures/use-client/: input.js  output.js
crates/loader_compilation/: Cargo.toml
crates/loader_compilation/src/: compiler.rs  lib.rs  transform.rs
crates/loader_compilation/src/transform/: keep_export.rs  mod.rs
crates/loader_compilation/tests/: fixtures.rs
crates/loader_compilation/tests/fixtures/basic/: input.js  output.js
crates/loader_compilation/tests/fixtures/basic/.ice/: route-manifest.json
crates/loader_compilation/tests/fixtures/default/: input.js
crates/loader_compilation/tests/fixtures/multiple/: input.js  output.js
crates/loader_compilation/tests/fixtures/named/: input.js  output.js
crates/loader_compilation/tests/fixtures/require_basic/: input.js  output.js
crates/loader_compilation/tests/fixtures/require_default/: input.js  output.js
crates/loader_compilation/tests/fixtures/require_named/: input.js
crates/loader_compilation/tests/fixtures/require_rest/: input.js  output.js
crates/loader_compilation/tests/fixtures/require_scoped/: input.js  output.js
crates/node_binding/: Cargo.toml  index.d.ts  index.js  package.json
crates/node_binding/npm/darwin-arm64/: README.md  package.json
crates/node_binding/npm/darwin-universal/: README.md  package.json
crates/node_binding/npm/darwin-x64/: README.md  package.json
crates/node_binding/npm/linux-arm64-gnu/: README.md  package.json
crates/node_binding/npm/linux-arm64-musl/: README.md  package.json
crates/node_binding/npm/linux-x64-gnu/: README.md  package.json
crates/node_binding/npm/linux-x64-musl/: README.md  package.json
crates/node_binding/npm/win32-arm64-msvc/: README.md  package.json
crates/node_binding/npm/win32-ia32-msvc/: README.md  package.json
crates/node_binding/npm/win32-x64-msvc/: README.md  package.json
crates/node_binding/src/: lib.rs  loader.rs
crates/node_binding/src/plugins/: interceptor.rs  loader.rs
crates/plugin_change_package_import/: Cargo.toml  package.json
crates/plugin_change_package_import/src/: change_package_import.rs  config.rs  lib.rs
crates/plugin_change_package_import/tests/: fixture.rs
crates/plugin_change_package_import/tests/fixture/1/: output.js
crates/plugin_change_package_import/tests/fixture/ice_alias_transform/: input.js  output.js
crates/plugin_change_package_import/tests/fixture/ice_as_transform/: input.js
crates/plugin_change_package_import/tests/fixture/ice_basic_transform/: output.js
crates/plugin_change_package_import/tests/fixture/mix_specific_transform/: output.js
crates/plugin_change_package_import/tests/fixture/multi_literal_transform/: input.js  output.js
crates/plugin_change_package_import/tests/fixture/multi_literal_transform_2/: input.js  output.js
crates/plugin_change_package_import/tests/fixture/single_literal_transform/: input.js  output.js
crates/plugin_change_package_import/tests/fixture/single_specific_transform/: output.js
crates/plugin_manifest/: Cargo.toml
crates/plugin_manifest/src/: lib.rs  plugin.rs
crates/plugin_manifest/tests/: fixtures.rs
crates/plugin_manifest/tests/fixtures/basic/: index.js
crates/plugin_manifest/tests/fixtures/with-assets/: index.js  test.config.json
crates/plugin_specilize_module_name/: Cargo.toml  README.md
crates/plugin_specilize_module_name/src/: plugin.rs
crates/plugin_specilize_module_name/tests/: plugin.rs
crates/plugin_specilize_module_name/tests/fixtures/basic/: function.js  index.js  package-lock.json  package.json  util_1.js  utils.js
crates/swc_change_package_import/: Cargo.toml
crates/swc_change_package_import/src/: change_package_import.rs  config.rs  lib.rs
crates/swc_change_package_import/tests/: fixture.rs
crates/swc_change_package_import/tests/fixture/ice_alias_with_as_transform/: output.js
crates/swc_change_package_import/tests/fixture/ice_as_transform/: output.js
crates/swc_change_package_import/tests/fixture/ice_matched_transform/: input.js  output.js
crates/swc_change_package_import/tests/fixture/ice_multiple_transform/: output.js
crates/swc_change_package_import/tests/fixture/mix_specific_transform/: input.js  output.js
crates/swc_change_package_import/tests/fixture/multi_literal_transform/: input.js
crates/swc_change_package_import/tests/fixture/multi_specific_transform/: input.js  output.js
crates/swc_change_package_import/tests/fixture/single_specific_transform/: input.js
crates/swc_change_package_import/tests/fixture/single_specific_transform_2/: output.js
crates/swc_compiler/: Cargo.toml
crates/swc_compiler/src/: compiler.rs  lib.rs
crates/swc_plugin_change_package_import/: Cargo.toml
crates/swc_plugin_change_package_import/src/: change_package_import.rs  lib.rs
crates/swc_plugin_change_package_import/tests/: fixture.rs
crates/swc_plugin_change_package_import/tests/fixture/ice_basic_transform/: input.js
crates/swc_plugin_change_package_import/tests/fixture/ice_matched_transform/: output.js
crates/swc_plugin_change_package_import/tests/fixture/multi_specific_transform/: output.js
crates/swc_plugin_change_package_import/tests/fixture/single_literal_transform/: input.js  output.js
crates/swc_plugin_change_package_import/tests/fixture/single_specific_transform_2/: input.js
(+59 files in other folders)
