[workspace]
members  = [
  "crates/.rspack_crates/*",
  "crates/binding_options",
  "crates/node_binding",
  "crates/loader_compilation",
  "crates/plugin_manifest",
  "crates/plugin_specilize_module_name",
  "crates/plugin_optimize_package_import"
]
resolver = "2"

[workspace.dependencies]
anyhow             = { version = "1.0.75" }
async-trait        = { version = "0.1.71" }
better_scoped_tls  = { version = "0.1.1" }
derivative         = { version = "2.2.0" }
glob               = { version = "0.3.1" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi               = "2.12.2"
napi-derive        = "2.12.2"
napi-build         = "2.0.1"
rustc-hash         = { version = "1.1.0" }
serde              = { version = "1.0.171" }
serde_json         = { version = "1.0.100" }
tokio              = { version = "1.29.1" }
tracing            = { version = "0.1.37" }
async-recursion    = { version = "1.0.4" }
async-scoped       = { version = "0.7.1" }
backtrace          = "0.3"
bitflags           = { version = "1.3.2" }
colored            = { version = "2.0.4" }
concat-string      = "1.0.1"
dashmap            = { version = "5.5.0" }
derive_builder     = { version = "0.11.2" }
futures            = { version = "0.3.28" }
futures-util       = { version = "0.3.28" }
hashlink           = { version = "0.8.3" }
indexmap           = { version = "1.9.3" }
insta              = { version = "1.30.0" }
itertools          = { version = "0.10.5" }
json               = { version = "0.12.4" }
linked_hash_set    = { version = "0.1.4" }
mimalloc-rust      = { version = "0.2" }
mime_guess         = { version = "2.0.4" }
once_cell          = { version = "1.18.0" }
paste              = { version = "1.0" }
pathdiff           = { version = "0.2.1" }
preset_env_base    = { version = "0.4.5" }
rayon              = { version = "1.7.0" }
regex              = { version = "1.9.1" }
rkyv               = { version = "0.7.42" }
rspack_sources     = { version = "0.2.7" }
schemars           = { version = "0.8.12" }
similar            = { version = "2.2.1" }
sugar_path         = { version = "0.0.12" }
testing_macros     = { version = "0.2.11" }
tracing-subscriber = { version = "0.3.17" }
url                = { version = "2.4.0" }
urlencoding        = { version = "2.1.2" }
ustr               = { version = "0.9.0" }
xxhash-rust        = { version = "0.8.6" }

napi-sys            = { version = "=2.2.3" }
styled_components   = { version = "=0.72.0" }
swc_config          = { version = "=0.1.7" }
swc_core            = { version = "=0.83.1", default-features = false }
swc_css             = { version = "=0.155.2" }
swc_ecma_minifier   = { version = "=0.187.0", default-features = false }
swc_emotion         = { version = "=0.42.0" }
swc_error_reporters = { version = "=0.16.1" }
swc_html            = { version = "=0.131.0" }
swc_html_minifier   = { version = "=0.128.0" }
swc_node_comments   = { version = "=0.19.1" }
tikv-jemallocator   = { version = "=0.5.4", features = ["disable_initial_exec_tls"] }

[patch.crates-io]
swc_config          = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_core            = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_ecma_minifier   = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_error_reporters = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_html            = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_html_minifier   = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_node_comments   = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_common          = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_ecma_utils      = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_ecma_ast        = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_ecma_visit      = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
swc_atoms           = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }
preset_env_base     = { git = "https://github.com/swc-project/swc.git", rev = "5c00525" }

[profile.dev]
debug       = 2
incremental = true

[profile.release]
codegen-units = 1
debug         = false
lto           = false # disabled by now, because it will significantly increase our compile time.
opt-level     = 3
strip         = true
