[package]
name = "loader_barrel"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
serde_json = { workspace = true }
stacker = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
swc_core = { workspace = true, features = [
  "base",
  "common"
] }
rspack_ast = { workspace = true }
rspack_core = { workspace = true }
rspack_error = { workspace = true }
rspack_regex = { workspace = true }
rspack_loader_runner = { workspace = true }
rspack_plugin_javascript = { workspace = true }
rspack_cacheable = { workspace = true }
swc_compiler = { path = "../swc_compiler" }
swc_optimize_barrel = { path = "../swc_optimize_barrel" }

[dev-dependencies]
rspack_util = { path = "../.rspack_crates/rspack_util" }