[package]
name = "loader_compilation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
either = "1"
lazy_static = "1.4.0"
once_cell = { workspace = true }
rspack_ast = { path = "../.rspack_crates/rspack_ast" }
rspack_core = { path = "../.rspack_crates/rspack_core" }
rspack_error = { path = "../.rspack_crates/rspack_error" }
rspack_loader_runner = { path = "../.rspack_crates/rspack_loader_runner" }
rspack_plugin_javascript = { path = "../.rspack_crates/rspack_plugin_javascript" }
rspack_regex = { path = "../.rspack_crates/rspack_regex" }
rspack_util = { path = "../.rspack_crates/rspack_util" }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.100"
swc_config = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "ecma_ast",
  "common"
] }
swc_emotion = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh32"] }
swc_compiler = { path = "../swc_compiler" }
swc_env_replacement = { path = "../swc_env_replacement" }
swc_keep_export = { path = "../swc_keep_export" }
swc_remove_export = { path = "../swc_remove_export" }
swc_named_import_transform = { path = "../swc_named_import_transform" }

[dev-dependencies]
indexmap       = { workspace = true }
tokio          = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }
rspack_testing = { path = "../.rspack_crates/rspack_testing" }