[package]
name = "loader_compilation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
either = "1"
once_cell = { workspace = true }
rspack_ast = { workspace = true }
rspack_core = { workspace = true }
rspack_error = { workspace = true }
rspack_loader_runner = { workspace = true }
rspack_plugin_javascript = { workspace = true }
rspack_regex = { workspace = true }
rspack_util = { workspace = true }
rspack_cacheable = { workspace = true }
regex = { workspace = true }
stacker = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swc_config = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "ecma_ast",
  "common"
] }
xxhash-rust = { workspace = true, features = ["xxh32"] }
swc_compiler = { path = "../swc_compiler" }
swc_env_replacement = { path = "../swc_env_replacement" }
swc_keep_export = { path = "../swc_keep_export" }
swc_remove_export = { path = "../swc_remove_export" }
swc_named_import_transform = { path = "../swc_named_import_transform" }
swc_change_package_import = { path = "../swc_change_package_import" }
tokio = { workspace = true }

[dev-dependencies]
indexmap       = { workspace = true }
tokio          = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }