[package]
edition = "2021"
name = "node_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []
plugin  = ["binding_options/plugin"]

[dependencies]
ropey                    = { workspace = true }
rspack_allocator         = { workspace = true }
binding_options          = { path = "../binding_options" }
rspack_binding_values    = { workspace = true }
rspack_collections       = { workspace = true }
rspack_core              = { workspace = true }
rspack_error             = { workspace = true }
rspack_fs                = { workspace = true }
rspack_fs_node           = { workspace = true }
rspack_hash              = { workspace = true }
rspack_hook              = { workspace = true }
rspack_napi              = { workspace = true }
rspack_paths             = { workspace = true }
rspack_plugin_html       = { workspace = true }
rspack_plugin_javascript = { workspace = true }
rspack_util              = { workspace = true }

rspack_tracing = { workspace = true }

async-trait = { workspace = true }
cow-utils   = { workspace = true }
tracing     = { workspace = true }

napi        = { workspace = true }
napi-derive = { workspace = true }

color-backtrace = "0.6.1"


[build-dependencies]
napi-build = { workspace = true }
