[package]
description = "node binding"
edition     = "2021"
license     = "MIT"
name        = "node_binding"
publish     = false
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"
[lib]
crate-type = ["cdylib"]

[features]
plugin = ["binding_values/plugin"]

[dependencies]
anyhow                   = { workspace = true }
ropey                    = { workspace = true }
rspack_allocator         = { workspace = true }
binding_values    = { path = "../binding_values" }
rspack_collections       = { workspace = true }
rspack_core              = { workspace = true }
rspack_error             = { workspace = true }
rspack_fs                = { workspace = true }
rspack_fs_node           = { workspace = true }
rspack_hash              = { workspace = true }
rspack_hook              = { workspace = true }
rspack_napi              = { workspace = true }
rspack_paths             = { workspace = true }
rspack_plugin_html       = { workspace = true }
rspack_plugin_javascript = { workspace = true }
rspack_plugin_runtime    = { workspace = true }
rspack_util              = { workspace = true }

rspack_tracing = { workspace = true }

async-trait        = { workspace = true }
cow-utils          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

napi        = { workspace = true }
napi-derive = { workspace = true }

color-backtrace = "0.6.1"


[build-dependencies]
napi-build = { workspace = true }
