[package]
name = "plugin_change_package_import"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.86.82", features = [
    "ecma_plugin_transform",
    "ecma_ast",
    "common"
] }


[dev-dependencies]
testing = { version = "0.33.21" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
