[package]
name = "swc_change_package_import"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true, features = [
    "base",
    "ecma_ast",
    "ecma_utils",
    "ecma_visit",
    "common",
] }

[dev-dependencies]
swc_core = { workspace = true, features = [
    "testing_transform",
] }
testing = { workspace = true }
