[package]
name = "swc_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64                   = { version = "0.22" }
dashmap = { workspace = true }
jsonc-parser             = { version = "0.23.0", features = ["serde"] }
rspack_ast = { path = "../.rspack_crates/rspack_ast" }
swc_config               = { workspace = true }
swc_core = { workspace = true, features = [
  "base",
  "ecma_ast",
  "common"
] }
url = "2.5.0"